# tapir-script

./: CLAUDE.md  Cargo.toml  justfile
compiler/: Cargo.toml
compiler/benches/: compile.rs
compiler/src/: ast.rs  compile.rs  file_loader.rs  grammar.lalrpop  grammar_test.rs  import_resolver.rs  lexer.rs  lib.rs  prelude.rs  reporting.rs  tokens.rs  types.rs
compiler/src/ast/: metadata.rs
compiler/src/compile/: analyse.rs  bytecode_peephole.rs  constant_eval.rs  desugar.rs  disassemble.rs  ir.rs  loop_visitor.rs  references.rs  struct_visitor.rs  symtab_visitor.rs  type_visitor.rs
compiler/src/reporting/: format.rs
compiler/src/snapshots/: compiler__compile__test__compiler_snapshot_tests@extern_call_basic.tapir.snap  compiler__compile__test__compiler_snapshot_tests@extern_call_in_loop.tapir.snap  compiler__compile__test__compiler_snapshot_tests@extern_call_mixed_with_fn.tapir.snap  compiler__compile__test__compiler_snapshot_tests@extern_call_multiple_externs.tapir.snap  compiler__compile__test__compiler_snapshot_tests@extern_call_statement.tapir.snap  compiler__compile__test__compiler_snapshot_tests@extern_call_with_args.tapir.snap  compiler__compile__test__compiler_snapshot_tests@factorial_recursive.tapir.snap  compiler__compile__test__compiler_snapshot_tests@fix_mul_div_promotion.tapir.snap  compiler__compile__test__compiler_snapshot_tests@fn_call_many_returns.tapir.snap  compiler__compile__test__compiler_snapshot_tests@fn_call_one_return.tapir.snap  compiler__compile__test__compiler_snapshot_tests@globals.tapir.snap  (+74 more)
compiler/stdlib/: prelude.tapir
(+584 files in other folders)
