[workspace]
resolver = "2"

members = [
    "builtins",
    "bytecode",
    "compiler",
    "tapir-cli",
    "tapir-lsp",
    "tapir-script",
    "tapir-script-macros",
    "tapir-script-macros-core",
    "vm",
]

exclude = ["agb-example/juicy-collectathon"]

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
