[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
agb_fixnum = "0.22"
ariadne = "0.5"
lalrpop-util = "0.22.2"
logos = "0.15"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }

bytecode = { path = "../bytecode" }
builtins = { path = "../builtins" }
petgraph = "0.6.5"
elsa = "1.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.40", features = ["ron", "glob", "redactions"] }

[[bench]]
name = "compile"
harness = false

[build-dependencies]
lalrpop = "0.22.2"
